<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/englısh"
            android:layout_width="90dp"
            android:layout_height="52dp"
            app:srcCompat="@drawable/eng" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/alert"
            android:textColor="#C17300"
            android:textSize="11sp" />

        <ImageView
            android:id="@+id/hungary"
            android:layout_width="90dp"
            android:layout_height="52dp"
            app:srcCompat="@drawable/hun" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.32999998">

        <TextView
            android:id="@+id/textViewQr"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/type"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp" />


        <TextView
            android:id="@+id/textViewQrType"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewQrCont"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/content"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textViewQrContent"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="94dp"
        android:layout_marginEnd="10dp"
        android:text="@string/scan"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.808" />


    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="94dp"
        android:layout_marginStart="10dp"
        android:text="@string/submıt"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.807" />

    <Button
        android:id="@+id/ExcelButton"
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:layout_marginBottom="30dp"
        android:text="@string/export"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>